# Strategy

./: CMakeLists.txt  README.md  main.cpp
Army/: Army.cpp  Army.hpp
Game_Process/: Economy.cpp  Economy.hpp  EconomyUnitFactory.cpp  EconomyUnitFactory.hpp  UnitCost.cpp  UnitCost.hpp
Map/: Map.cpp  Map.hpp
Model/: Model.cpp  Model.hpp
Player/: Player.cpp  Player.hpp  PlayerDirector.cpp  PlayerDirector.hpp
Presenter/: Commands.cpp  Commands.hpp  Presenter.cpp  Presenter.hpp  Subscriber.hpp
Test/: ArmyTest.hpp  EconomyTest.hpp  MapTest.hpp  PlayerTest.hpp  UnitsTest.cpp  UnitsTest.hpp
Units/: Building.cpp  Building.hpp  Creature.cpp  Creature.hpp  HumanUnitFactory.hpp  HumanUnits.cpp  HumanUnits.hpp  OrcUnitFactory.hpp  OrcUnits.cpp  OrcUnits.hpp  Unit.cpp  Unit.hpp  UnitFactory.hpp
Utils/: Utils.cpp  Utils.hpp
